Fix misalignment of donation total

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body {
   font-weight: bold;
   font-size: 50px;
   left: 60px;
-  top: 260px;
+  top: 540px;
   z-index: 999;
 }
 #jmarathon-meter-fill {
